objects/fferpcore__CompanyCreditTerms__c.object
<CustomObject>
    <customHelpPage>fferpcore__CompanyCreditTermsHelp</customHelpPage>
    <description>Contains the credit terms for a company. These are used to determine billing document due dates when credit terms are not held at account level.</description>
    <fields>
        <fullName>fferpcore__BaseDate1__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <inlineHelpText>The date on which terms will be calculated.</inlineHelpText>
        <label>Base Date 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fferpcore__CreditTermsBaseDate</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__BaseDate2__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <inlineHelpText>The date on which terms will be calculated.</inlineHelpText>
        <label>Base Date 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fferpcore__CreditTermsBaseDate</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__BaseDate3__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <inlineHelpText>The date on which terms will be calculated.</inlineHelpText>
        <label>Base Date 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fferpcore__CreditTermsBaseDate</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__Company__c</fullName>
        <description>The company to which these credit terms belong.</description>
        <inlineHelpText>The company to which these credit terms belong.</inlineHelpText>
        <label>Company</label>
        <referenceTo>fferpcore__Company__c</referenceTo>
        <relationshipLabel>Company Credit Terms</relationshipLabel>
        <relationshipName>CompanyCreditTerms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__DaysOffset1__c</fullName>
        <description>Number of days from base date when the document becomes due.</description>
        <inlineHelpText>Number of days from base date when the document becomes due.</inlineHelpText>
        <label>Days Offset 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__DaysOffset2__c</fullName>
        <description>Number of days from base date when the document becomes due.</description>
        <inlineHelpText>Number of days from base date when the document becomes due.</inlineHelpText>
        <label>Days Offset 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__DaysOffset3__c</fullName>
        <description>Number of days from base date when the document becomes due.</description>
        <inlineHelpText>Number of days from base date when the document becomes due.</inlineHelpText>
        <label>Days Offset 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__Description1__c</fullName>
        <description>The description of the settlement terms.</description>
        <inlineHelpText>The description of the settlement terms.</inlineHelpText>
        <label>Description 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Description2__c</fullName>
        <description>The description of the settlement terms.</description>
        <inlineHelpText>The description of the settlement terms.</inlineHelpText>
        <label>Description 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Description3__c</fullName>
        <description>The description of the settlement terms.</description>
        <inlineHelpText>The description of the settlement terms.</inlineHelpText>
        <label>Description 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Discount1__c</fullName>
        <description>The amount of discount to be applied.</description>
        <inlineHelpText>The amount of discount to be applied.</inlineHelpText>
        <label>Discount 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fferpcore__Discount2__c</fullName>
        <description>The amount of discount to be applied.</description>
        <inlineHelpText>The amount of discount to be applied.</inlineHelpText>
        <label>Discount 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fferpcore__Discount3__c</fullName>
        <description>The amount of discount to be applied.</description>
        <inlineHelpText>The amount of discount to be applied.</inlineHelpText>
        <label>Discount 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Company Credit Terms</label>
    <nameField>
        <label>Company Credit Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Credit Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>